Moved one inner class to gate.gui